bk_ida/gccida/c2/maybe_eliminate_biv_1
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/maybe_eliminate_biv_1/src/loop.c:9077:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v11; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/maybe_eliminate_biv_1/src/loop.c:9087:1: error: use of undeclared identifier 'induction_1'
induction_1 *giv; // rcx 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/maybe_eliminate_biv_1/src/loop.c:9087:14: error: use of undeclared identifier 'giv'; did you mean 'div'?
induction_1 *giv; // rcx 
             ^~~
             div
/usr/include/stdlib.h:849:14: note: 'div' declared here
extern div_t div (int __numer, int __denom)
             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/maybe_eliminate_biv_1/src/loop.c:9089:1: error: use of undeclared identifier 'induction_1'
induction_1 *v24; // r15 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/maybe_eliminate_biv_1/src/loop.c:9089:14: error: use of undeclared identifier 'v24'
induction_1 *v24; // r15 
             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/maybe_eliminate_biv_1/src/loop.c:9091:4: error: expected ';' after expression
rtx mult_val; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/maybe_eliminate_biv_1/src/loop.c:9091:5: error: use of undeclared identifier 'mult_val'
rtx mult_val; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/maybe_eliminate_biv_1/src/loop.c:9093:4: error: expected ';' after expression
rtx v28; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/maybe_eliminate_biv_1/src/loop.c:9093:5: error: use of undeclared identifier 'v28'
rtx v28; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/maybe_eliminate_biv_1/src/loop.c:9094:4: error: expected ';' after expression
rtx add_val; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/maybe_eliminate_biv_1/src/loop.c:9094:5: error: use of undeclared identifier 'add_val'
rtx add_val; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/maybe_eliminate_biv_1/src/loop.c:9095:1: error: use of undeclared identifier 'induction_1'
induction_1 *biv; // r8 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/maybe_eliminate_biv_1/src/loop.c:9095:14: error: use of undeclared identifier 'biv'; did you mean 'div'?
induction_1 *biv; // r8 
             ^~~
             div
/usr/include/stdlib.h:849:14: note: 'div' declared here
extern div_t div (int __numer, int __denom)
             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/maybe_eliminate_biv_1/src/loop.c:9097:4: error: expected ';' after expression
rtx v32; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/maybe_eliminate_biv_1/src/loop.c:9097:5: error: use of undeclared identifier 'v32'
rtx v32; // rsi 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/maybe_eliminate_biv_1/src/loop.c:9102:4: error: expected ';' after expression
rtx v37; // rdi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/maybe_eliminate_biv_1/src/loop.c:9102:5: error: use of undeclared identifier 'v37'
rtx v37; // rdi 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/maybe_eliminate_biv_1/src/loop.c:9103:4: error: expected ';' after expression
rtx v38; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/maybe_eliminate_biv_1/src/loop.c:9103:5: error: use of undeclared identifier 'v38'
rtx v38; // rcx 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/maybe_eliminate_biv_1/src/obj/loop.o] Error 1
